# treehole_backend/router/app.go
@@ -22,8 +22,13 @@ func Router() *gin.Engine {
 	// 路由配置
 	v1 := r.Group("/api/v1")
 	{
-		// 公共接口
+		/*
+		* 公共接口
+		 */
 		v1.GET("/hello", service.Hello)
+
+		// 图片上传
+		v1.POST("/uploadLocal", middlewares.AuthUserCheck(), service.UploadLocal)
 
 		/*
 		* 登录业务接口
@@ -58,6 +63,24 @@ func Router() *gin.Engine {
 
 			// 3、修改用户密码及信息
 			forget.POST("/modifyPassword", middlewares.AuthUserCheck(), service.ModifyPassword)
+		}
+
+		/*
+		* 用户业务接口
+		 */
+		user := v1.Group("/user", middlewares.AuthUserCheck())
+		{
+			// 1、获取当前用户信息
+			user.GET("/getUserInfo", service.GetUserInfo)
+
+			// 2、修改用户信息
+			// 上传图片：使用公共接口的上传文件，然后得到url
+			// 修改年龄，性别，用户名等信息
+			user.POST("/modifyUserInfo", service.ModifyUserInfo)
+
+			// 3、更换密码
+			// 旧密码、新密码、新确认密码
+			user.POST("/userModifyPassword", service.UserModifyPassword)
 		}
 
 	}
